--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -63,11 +63,11 @@
 
                         <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="#contact-us" aria-current="page">Contact Us</a></li>
 
-                        <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="#" aria-current="page">Shop</a></li>
+                        <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="shop.html" aria-current="page">Shop</a></li>
 
                         <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item donatelink"><a href="donate.html" aria-current="page">Donate Now</a></li>
 
-            
+
                     </ul>
                 </div>
             </div>
@@ -82,10 +82,10 @@
 
                         <li class="menu-item menu-item-home  greennature-normal-menu"><a href="#faq">FAQ</a></li>
 
-                        <li class="menu-item menu-item-home  greennature-normal-menu"><a href="#">Shop*</a></li>
+                        <li class="menu-item menu-item-home  greennature-normal-menu"><a href="shop.html">Shop*</a></li>
                     </ul>
                     <li class="greennature-donate-button"><button type="button" id="modalBtn" class="btn-donate">Donate</button>
-                    </a>                    
+
                 </nav>
                 <div class="greennature-navigation-gimmick" id="greennature-navigation-gimmick"></div>
                 <div class="clear"></div>
@@ -287,14 +287,14 @@
                             <div class="card-header" id="headingOne">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        Who can participate:                                    </button>
+                                        Who can participate: </button>
                                 </h2>
                             </div>
 
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body">
                                     Everyone, Donate-A-seed is open to anyone who is willing to help donate
-                                    to farmers in combacting hunger.                                 </div>
+                                    to farmers in combacting hunger. </div>
                             </div>
                         </div>
 
@@ -304,20 +304,20 @@
                             <div class="card-header" id="headingTwo">
                                 <h2 class="mb-0">
                                     <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Why should I participate:                                    </button>
+                                        Why should I participate: </button>
                                 </h2>
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                 <div class="card-body">
                                     To be part of a community that will reach out to millions of less privileged
-                                    people who needs food at this time and beyond                                 </div>
+                                    people who needs food at this time and beyond </div>
                             </div>
                         </div>
 
                     </div>
                 </div>
 
-                <div class="col-md-6 pic">
+                <div>
 
                 </div>
             </div>
@@ -525,7 +525,7 @@
 
 {% macro render_sponsors(render) %}
 <!--sponsors-->
-<section id = "sponsors">
+<section id="sponsors">
     <div class="text-center mb-3">
         <div class="container border-primary rounded">
             <div class="row p-2">
@@ -602,10 +602,10 @@
                     <h2 class="stunning-item-title">The only way to make this happened is to take action!</h2>
                     <div class="stunning-item-caption greennature-skin-content">
                         <p>Let's End Hunger Together.</p>
-                    </div> 
-                        <a onclick="location.href='donate.html'" type="button" target="blank" class="stunning-item-button greennature-button large greennature-lb-payment" id="modalBtn" background-color: #ecb338; color: #ffffff;>Donate Now!</a>
-                        <a onclick="location.href='registerfarmer.html'" type="button" target="blank" class="stunning-item-button greennature-button large greennature-lb-payment" id="modalBtn" style="background-color: #ecb338 !important; color: #ffffff;">Register!</a>
                     </div>
+                    <a onclick="location.href='donate.html'" type="button" target="blank" class="stunning-item-button greennature-button large greennature-lb-payment" id="modalBtn" background-color: #ecb338; color: #ffffff;>Donate Now!</a>
+                    <a onclick="location.href='registerfarmer.html'" type="button" target="blank" class="stunning-item-button greennature-button large greennature-lb-payment" id="modalBtn" style="background-color: #ecb338 !important; color: #ffffff;">Register!</a>
+                </div>
             </div>
             <div class="clear"></div>
             <div class="clear"></div>
@@ -735,13 +735,13 @@
 <!-- JS, Popper.js, and jQuery -->
 <!--counter script-->
 <script>
-    jQuery(document).ready(function( $ )
-    {
+    jQuery(document).ready(function($) {
         $('.counter').counterUp({
-        delay: 10,
-        time: 1000
+            delay: 10,
+            time: 1000
         });
     });
+
 </script>
 <script type='text/javascript' src='../static/js/jquery.counterup.min.js'></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
@@ -752,6 +752,7 @@
 <script>
     var ms_grabbing_curosr = '../static/plugins/masterslider/public/assets/css/common/grabbing.html',
         ms_grab_curosr = '../static/plugins/masterslider/public/assets/css/common/grab.html';
+
 </script>
 <script type='text/javascript' src='../static/js/scrolltotop.js'></script>
 <script type='text/javascript' src='../static/js/navsec.js'></script>
@@ -969,17 +970,17 @@
 
                 <div class="container">
                     <div class="row">
-                      <div class="col-md-6">
-                        <button type="submit" class="btn btn-primary">Submit Application</button>
+                        <div class="col-md-6">
+                            <button type="submit" class="btn btn-primary">Submit Application</button>
+                        </div>
+                        <div class="col-md-6">
+                            <br>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="not-a">Not a Farmer? sign up as a <a href="registerseed.html">Seed Deliverer</a> instead</p>
+                        </div>
                     </div>
-                      <div class="col-md-6">
-                          <br>
-                      </div>
-                      <div class="col-md-6">
-                          <p class="not-a">Not a Farmer? sign up as a <a href="registerseed.html">Seed Deliverer</a> instead</p>
-                      </div>
-                    </div>
-                </div>            
+                </div>
             </form>
         </div>
     </div>
@@ -1117,15 +1118,15 @@
 
                 <div class="container">
                     <div class="row">
-                      <div class="col-md-6">
-                        <button type="submit" class="btn btn-primary">Submit Application</button>
-                    </div>
-                      <div class="col-md-6">
-                          <br>
-                      </div>
-                      <div class="col-md-6">
-                          <p class="not-a">Not a Seed Deliverer? sign up as a <a href="registerfarmer.html">Farmer instead</a></p>
-                      </div>
+                        <div class="col-md-6">
+                            <button type="submit" class="btn btn-primary">Submit Application</button>
+                        </div>
+                        <div class="col-md-6">
+                            <br>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="not-a">Not a Seed Deliverer? sign up as a <a href="registerfarmer.html">Farmer instead</a></p>
+                        </div>
                     </div>
                 </div>
             </form>
@@ -1154,17 +1155,17 @@
                                     <div class="form-row">
                                         <div class="btn-group btn-group-toggle col-md-6 mb-3" data-toggle="buttons">
                                             <label class="btn btn-primary col-md-6 mb-3">
-                                              <input type="radio" name="options" id="option1"> #1000
+                                                <input type="radio" name="options" id="option1"> #1000
                                             </label>
                                             <label class="btn btn-primary col-md-6 mb-3">
-                                              <input type="radio" name="options" id="option2"> #50,000
+                                                <input type="radio" name="options" id="option2"> #50,000
                                             </label>
-                                            
-                                          </div>
+
+                                        </div>
                                     </div>
                                 </div>
                                 <input type="number" class="form-control" id="donate-amount" placeholder="amount in (Naira)" required>
-                              </div>
+                            </div>
 
                             <div class="form-row">
                                 <div class="form-group col-md-6">
@@ -1176,28 +1177,28 @@
                                     <input name="lastname" type="text" class="form-control" id="lastname" required>
                                 </div>
                             </div>
-            
-                            <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="email">Email Address*</label>
-                                <input name="email" type="email" class="form-control" id="email" required>
-                                <small id="emailhelp" class="form-text text-muted">
-                                    We will never share your Email...
-                                </small>
-                            </div>
 
-                            <div class="form-group col-md-6">
-                                <label for="address">Phone Number</label>
-                                <input name="phone" type="number" class="form-control" id="phone">
-                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="email">Email Address*</label>
+                                    <input name="email" type="email" class="form-control" id="email" required>
+                                    <small id="emailhelp" class="form-text text-muted">
+                                        We will never share your Email...
+                                    </small>
+                                </div>
+
+                                <div class="form-group col-md-6">
+                                    <label for="address">Phone Number</label>
+                                    <input name="phone" type="number" class="form-control" id="phone">
+                                </div>
                             </div>
 
                             <div class="form-group">
                                 <label for="exampleFormControlTextarea1">Additional Notes</label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="note: this will appear on our home page"></textarea>
-                              </div>
-            
-    
+                            </div>
+
+
                             <button type="submit" class="btn btn-primary">Donate Now</button>
                         </form>
                     </div>
