--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body data-rsssl=1 class="home page-template-default page page-id-5680 _masterslider _msp_version_3.2.7 woocommerce-no-js" style="background-image: url(../static/images/body.svg)">
-    
+
     {{ render_donatemodal(render) }}
 
-    
+
     <div class="body-wrapper float-menu">
 
 
@@ -79,15 +79,15 @@
 
                                 <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="index.html" aria-current="page">Home</a></li>
 
-                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="index.html" aria-current="page">About Us</a></li>
+                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="#about-us" aria-current="page">About Us</a></li>
 
-                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="index.html" aria-current="page">Causes</a></li>
+                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="#our-causes" aria-current="page">Causes</a></li>
 
-                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="index.html" aria-current="page">FAQ</a></li>
+                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="#faq" aria-current="page">FAQ</a></li>
 
-                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="index.html" aria-current="page">Contact Us</a></li>
+                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="#contact-us" aria-current="page">Contact Us</a></li>
 
-                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="index.html" aria-current="page">Shop</a></li>
+                                <li class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item"><a href="shop.html" aria-current="page">Shop</a></li>
 
                                 <li ss="menu-item menu-item-has-children menu-item-"><a href="#">Register</a>
                                     <ul class="dl-submenu">
@@ -115,7 +115,7 @@
 
                                 <li class="menu-item menu-item-home  greennature-normal-menu"><a href="#contact-us">Contact Us</a></li>
 
-                                <li class="menu-item menu-item-home  greennature-normal-menu"><a href="index.html">Shop*</a></li>
+                                <li class="menu-item menu-item-home  greennature-normal-menu"><a href="shop.html">Shop*</a></li>
 
                                 <li class="menu-item menu-item-has-children greennature-normal-menu"><a href="#" class="sf-with-ul-pre">Register</a>
                                     <ul class="sub-menu">
@@ -124,8 +124,8 @@
                                     </ul>
                                 </li>
                             </ul>
-                           <li class="greennature-donate-button"><button type="button" id="modalBtn" class="btn-donate">Donate</button>
-                    </a> 
+                            <li class="greennature-donate-button"><button type="button" id="modalBtn" class="btn-donate">Donate</button>
+                                </a>
                         </nav>
                         <div class="greennature-navigation-gimmick" id="greennature-navigation-gimmick"></div>
                         <div class="clear"></div>
@@ -217,11 +217,11 @@ color: #ecb338;" class="ms-layer ms-btn ms-btn-round ms-btn-n msp-preset-btn-159
                     <div class="four columns">
                         <div class="greennature-ux column-service-ux">
                             <div class="greennature-item greennature-column-service-item greennature-type-2-bg" style="margin-bottom: 0px; background-color: #3f3221; height: ;">
-                                <div class="column-service-image"><img src="{{ url_for('static', filename='images/donation.png')}}" alt="" width="80" height="80"/></div>
+                                <div class="column-service-image"><img src="{{ url_for('static', filename='images/donation.png')}}" alt="" width="80" height="80" /></div>
                                 <div class="column-service-content-wrapper">
                                     <h3 class="column-service-title">We Need Your Help</h3>
                                     <div class="column-service-content greennature-skin-content">
-                                        <p>With more than a quarter of a billion people potentially at the brink of starvation, swift action needs to be taken to provide food and humanitarian relief to the most at-risk regions.</p>             
+                                        <p>With more than a quarter of a billion people potentially at the brink of starvation, swift action needs to be taken to provide food and humanitarian relief to the most at-risk regions.</p>
                                         <br>
                                     </div><a class="column-service-read-more" href="donate.html" target="_blank">Donate Now</a>
                                 </div>
@@ -259,8 +259,8 @@ background-position: center; ">
                             <div class="action-ads-caption greennature-skin-info">Lets stop this Hunger and fufill their happiness</div>
                             <div class="action-ads-divider" style="background: #facc2e;"></div>
                             <div class="action-ads-content">
-                               <p>After decades of steady decline, the number of people who suffer from hunger – as measured by the prevalence of undernourishment – began to slowly increase again in 2015. Today, more than 820 million people regularly go to bed hungry, of whom about 135 million suffer from acute hunger largely due to man-made conflicts, climate change and economic downturns. The COVID-19 pandemic could now double that number, putting an additional 130 million people at risk of suffering acute hunger by the end of 2020, according to the World Food Programme...
-                                   <a href="https://www.un.org/sustainabledevelopment/hunger/">Learn More &raquo;</a></p>
+                                <p>After decades of steady decline, the number of people who suffer from hunger – as measured by the prevalence of undernourishment – began to slowly increase again in 2015. Today, more than 820 million people regularly go to bed hungry, of whom about 135 million suffer from acute hunger largely due to man-made conflicts, climate change and economic downturns. The COVID-19 pandemic could now double that number, putting an additional 130 million people at risk of suffering acute hunger by the end of 2020, according to the World Food Programme...
+                                    <a href="https://www.un.org/sustainabledevelopment/hunger/">Learn More &raquo;</a></p>
                                 <a href="donate.html" class="action-ads-button large greennature-button greennature-lb-payment" style="color: #6d5b1c;background-color: #fec428;">Donate Now</a>
                             </div>
                         </div>
