--- a/src/templates/donate.html
+++ b/src/templates/donate.html
@@ -16,42 +16,8 @@
 
         {{ render_navbar(render) }}
 
-        {{ render_donatemodal(render) }}
+        <h1>DONATE PAGE</h1>
 
-        <div class="content-wrapper">
-            <div class="greennature-content">
-
-                <!-- Above Sidebar Section-->
-
-                <!-- Sidebar With Content Section-->
-                <div class="with-sidebar-wrapper">
-                    <section id="content-section-1">
-                        <div class="greennature-parallax-wrapper greennature-background-image gdlr-show-all greennature-skin-dark-skin" id="greennature-parallax-wrapper-1" data-bgspeed="0" style="background-image: url({{ url_for('static', filename='images/farmer-5.jpg')}}); background-size: cover; background-position: center; padding-top: 260px; padding-bottom: 140px; ">
-                            <div class="container">
-                                <div class="greennature-title-item">
-                                    <div class="greennature-item-title-wrapper greennature-item  greennature-center greennature-extra-large ">
-                                        <div class="greennature-item-title-container container">
-                                            <div class="greennature-item-title-head">
-                                                <h3 class="greennature-item-title greennature-skin-title greennature-skin-border">REGISTER</h3>
-                                                <div class="greennature-item-title-caption greennature-skin-info">As a SEED DELIVERER</div>
-                                                <div class="clear"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="clear"></div>
-                                <div class="clear"></div>
-                            </div>
-                        </div>
-                        <div class="clear"></div>
-                    </section>
-                </div>
-                <!-- Below Sidebar Section-->
-            </div>
-            <!-- greennature-content -->
-            <div class="clear"></div>
-        </div>
-        <!-- content wrapper -->
     </div>
 
     {{ render_subscribenews(render) }}
@@ -60,4 +26,5 @@
 
     {{ render_js(render) }}
 </body>
+
 </html>
